# pam_deviceauthgrant

./: MIT_LICENSE  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  configure  configure.ac  libtool
.github/workflows/: gnu-autotools-and-deps.yml
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
src/: Makefile.am  Makefile.in  deviceauthgrant.c  deviceauthgrant.lo  jsmn.h  pam_deviceauthgrant.la  qr.c  qr.lo
